fix: update macOS file size to ~300 MB across all translations

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -77,7 +77,7 @@
     "label": "ابدأ",
     "title": "تحميل<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "متاح الآن لنظام macOS. قريبًا على Windows و Linux.",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "قريبًا"
@@ -299,7 +299,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12 فما فوق (Intel و Apple Silicon)",
-    "macos_size": "حوالي 800 ميجابايت",
+    "macos_size": "حوالي 300 ميجابايت (+ 1.5 جيجابايت للنموذج عند التشغيل الأول)",
     "windows_desc": "Windows 10 فما فوق (64 بت)",
     "linux_desc": "Ubuntu 22.04 فما فوق / AppImage",
     "system_req_heading": "متطلبات النظام",
