--- a/translations/ru.json
+++ b/translations/ru.json
@@ -76,7 +76,7 @@
     "label": "Начать",
     "title": "Скачать<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Доступно сейчас для macOS. Windows и Linux скоро.",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "Скоро"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel и Apple Silicon)",
-    "macos_size": "~800 МБ",
+    "macos_size": "~300 МБ (+ 1,5 ГБ модель при первом запуске)",
     "windows_desc": "Windows 10+ (64-бит)",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
     "system_req_heading": "Системные Требования",
