--- a/translations/zh.json
+++ b/translations/zh.json
@@ -76,7 +76,7 @@
     "label": "开始使用",
     "title": "下载<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "现已支持macOS。Windows和Linux即将推出。",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "即将推出"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12及以上 (Intel和Apple Silicon)",
-    "macos_size": "约800 MB",
+    "macos_size": "约300 MB (+ 首次运行时下载1.5 GB模型)",
     "windows_desc": "Windows 10及以上 (64位)",
     "linux_desc": "Ubuntu 22.04及以上 / AppImage",
     "system_req_heading": "系统要求",
