--- a/translations/en.json
+++ b/translations/en.json
@@ -76,7 +76,7 @@
     "label": "Get Started",
     "title": "Download<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Available now for macOS. Windows and Linux coming soon.",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "Coming Soon"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel & Apple Silicon)",
-    "macos_size": "~800 MB",
+    "macos_size": "~300 MB (+ 1.5 GB model on first run)",
     "windows_desc": "Windows 10+ (64-bit)",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
     "system_req_heading": "System Requirements",
