--- a/translations/es.json
+++ b/translations/es.json
@@ -76,7 +76,7 @@
     "label": "Comenzar",
     "title": "Descargar<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Disponible ahora para macOS. Windows y Linux próximamente.",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "Próximamente"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel y Apple Silicon)",
-    "macos_size": "~800 MB",
+    "macos_size": "~300 MB (+ modelo de 1.5 GB en primera ejecución)",
     "windows_desc": "Windows 10+ (64 bits)",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
     "system_req_heading": "Requisitos del Sistema",
