--- a/translations/fr.json
+++ b/translations/fr.json
@@ -76,7 +76,7 @@
     "label": "Commencer",
     "title": "Télécharger<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "Disponible maintenant pour macOS. Windows et Linux bientôt disponibles.",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "Bientôt Disponible"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel et Apple Silicon)",
-    "macos_size": "~800 Mo",
+    "macos_size": "~300 Mo (+ modèle de 1,5 Go au premier lancement)",
     "windows_desc": "Windows 10+ (64 bits)",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
     "system_req_heading": "Configuration Requise",
