--- a/translations/hi.json
+++ b/translations/hi.json
@@ -76,7 +76,7 @@
     "label": "शुरू करें",
     "title": "डाउनलोड<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "अभी macOS के लिए उपलब्ध। Windows और Linux जल्द आ रहे हैं।",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "जल्द आ रहा है"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12+ (Intel और Apple Silicon)",
-    "macos_size": "~800 MB",
+    "macos_size": "~300 MB (+ पहली बार चलाने पर 1.5 GB मॉडल)",
     "windows_desc": "Windows 10+ (64-बिट)",
     "linux_desc": "Ubuntu 22.04+ / AppImage",
     "system_req_heading": "सिस्टम आवश्यकताएं",
