--- a/translations/ja.json
+++ b/translations/ja.json
@@ -76,7 +76,7 @@
     "label": "始める",
     "title": "ダウンロード<br><span class='gradient-text'>LocalMind</span>",
     "subtitle": "現在macOSで利用可能。WindowsとLinuxは近日公開。",
-    "macos": "macOS v1.2.0",
+    "macos": "macOS v1.2.1",
     "windows": "Windows",
     "linux": "Linux",
     "coming_soon": "近日公開"
@@ -298,7 +298,7 @@
   },
   "download_details": {
     "macos_desc": "macOS 12以降 (IntelとApple Silicon)",
-    "macos_size": "約800 MB",
+    "macos_size": "約300 MB (+ 初回起動時に1.5 GBモデル)",
     "windows_desc": "Windows 10以降 (64ビット)",
     "linux_desc": "Ubuntu 22.04以降 / AppImage",
     "system_req_heading": "システム要件",
